src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__boolean__not__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/boolean.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Bool,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Bool,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        Not(
            Not,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
